# model-3-checker

./: .gitignore  Dockerfile  Makefile  pyproject.toml
.circleci/: config.yml
docs/: data.json  index.html
model_3/: __init__.py  extract_data.py  render.py
model_3/templates/: apr.js  base.html  index.html  style.css
