[tool.poetry]
name = "model-3-checker"
version = "0.1.0"
description = ""
authors = ["MarcDufresne <marc.andre.dufresne@gmail.com>"]

packages = [
    {include = "model_3"}
]

[tool.poetry.dependencies]
python = "^3.6"
selenium = "^3.141"
click = "^7.0"
jinja2 = "^2.10"
ujson = "^1.35"
arrow = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
